loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:3: error: ';' expected but '{' found.
}while(crossing()==false){
                         ^