loopdowhile.Poucet2.scala.code
do{
  avance()
}while(crossing()==false){
  var n:Int =0
  if (estSurBiscuit){
    n=n+1
  }
  
}